public/css/small.css
/* ---------------------------------------------------------------------- */
/* ------------------------------ COLORS & FONTS -----------------------  */

/* 
    https://coolors.co/b6465f-c5cbd3-054a91-000500-ea8c55
*/

:root {
    --color1: #EA8C55;
    --color2: #000500;
    --color3: #054A91;
    --color4: #C5CBD3;
    --color5: #B6465F;
}

.color1 {
    color: var(--color1);
}

.color2 {
    color: var(--color2);
}

.color3 {
    color: var(--color3);
}

.color4 {
    color: var(--color4);
}

.color5 {
    color: var(--color5);
}

.hover-color1:hover {
    color: var(--color1);
}

/* add other hovers here */

.bg-color1 {
    background-color: var(--color1);
}

.bg-color2 {
    background-color: var(--color2);
}

.bg-color3 {
    background-color: var(--color3);
}

.bg-color4 {
    background-color: var(--color4);
}

.bg-color5 {
    background-color: var(--color5);
}


/* ---------------------------------------------------------------------- */
/* ------------------------------ ELEMENTS -----------------------------  */

*, *:before, *:after {
    -webkit-box-sizing: inherit;
    box-sizing: border-box;
}

html, body {
    width: 100%;
    padding: 0;
    margin: 0;
}

body {
    line-height: 1.5;
    font-family: sans-serif;
}

main {
    width: 100%;
    padding: 0 1rem 0;
    margin: 0 0 6rem 0;
}

table {
    border-collapse: collapse;
}

td {
    border: 1px solid var(--color2);
}

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    padding: 1rem;
}


/* ---------------------------------------------------------------------- */
/* ------------------------------ CLASSES ------------------------------  */

.hide, .hide-small, .title-hide, .tag-hide, .status-hide, .user-hide, .date-hide, .favorites-hide {
    display: none !important;
}

.card {
    margin: 1rem auto;
    box-shadow: 2px 2px 4px #bbb;
}

.sans-serif {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.caps {
    text-transform: uppercase;
}

.border1 {
    border: 1px solid !important;
}

.border2 {
    border: 2px solid !important;
}

.border-bot1 {
    border-bottom: 1px groove;
}

.no-under {
    text-decoration: none;
}

.divider {
    height: 1px;
    overflow: hidden;
    background-color: #eee;
    width: 80%;
    margin: 0 auto;
}

.center-block {
    display: block !important;
    margin: 0 auto;
}

.block {
    display: block !important;
}

.inline {
    display: inline !important;
}

.circle {
    border-radius: 100% !important;
}

.float-r {
    float: right;
}

.center-txt { 
    text-align: center;
}

.right-txt {
    text-align: right;
}

.pad-0_3 {
    padding: .3rem;
}

.pad-0_4 {
    padding: .4rem;
}

.pad-0_5 {
    padding: .5rem;
}

.pad-1 {
    padding: 1rem;
}

.pad-2 {
    padding: 2rem;
}

.pad-top-4 {
    padding-top: 4rem;
}

.pad-bot-2 {
    padding-bottom: 2rem;
}

.pad-right-0_5 {
    padding-right: .5rem;
}

.pad-right-1 {
    padding-right: 1rem;
}

.no-pad {
    padding: 0;
}

.no-marg {
    margin: 0;
}

.marg-left-0_5 {
    margin-left: .5rem;
}

.marg-left-2 {
    margin-left: 2rem;
}

.marg-top-0_1 {
    margin-top: .1rem;
}

.marg-top-0_25 {
    margin-top: .3rem;
}

.marg-top-0_5 {
    margin-top: .5rem;
}

.marg-top-1 {
    margin-top: 1rem;
}

.marg-top-1_5 {
    margin-top: 1.5rem;
}

.marg-top-2 {
    margin-top: 2rem;
}

.marg-right-0_5 {
    margin-right: .5rem;
}

.marg-right-2 {
    margin-right: 2rem;
}

.marg-bot-0 {
    margin-bottom: 0;
}

.marg-bot-0_5 {
    margin-bottom: .5rem;
}

.marg-bot-1 {
    margin-bottom: 1rem;
}

.marg-bot-2 {
    margin-bottom: 2rem;
}

.marg-0_5 {
    margin: 0.5rem;
}

.no-list-style {
    list-style-type: none;
}

.section {
    padding: 1.25rem 0;
}

.font075 {
    font-size: .75rem;
}

.font08 {
    font-size: .8rem;
}

.font09 {
    font-size: .9rem;
}

.font095 {
    font-size: .95rem;
}

.font1 {
    font-size: 1rem;
}

.font2_5 {
    font-size: 2.5rem;
}

.bold {
    font-weight: bold;
}

.italic {
    font-style: italic;
}

.high2_5 {
    height: 2.5rem;
}

.wide-fit {
    width: fit-content;
}

.video-wrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    height: 0;
}

.video-wrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.wide1 {
    width: 1.5rem;
}

.wide2_5 {
    width: 2.5rem;
}

.wide10 {
    width: 10rem;
}

.wide15 {
    width: 15rem;
}

.wide20 {
    width: 20rem;
}

.white {
    color: white;
}

.bg-none {
    background-color: unset;
}

#dashStatusSearch, #dashDateSearch, #publicUserSearch {
    border-radius: 5px;
    -webkit-border-radius: 5px;
    color: black;
    background-color: white;
}

.btn {
    display: inline-block;
    border: unset;
    width: fit-content;
    padding: .5rem .75rem;
    text-align: center;
    text-decoration: none;
    box-shadow: 2px 2px 2px #bbb;
    cursor: pointer;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    appearance: none;
    -webkit-appearance: none;
}

.btn:hover {
    box-shadow: 3px 3px 3px #777;
}

.tool-btn {
    margin: .25rem 0;
}

.grid10 {
    display: grid;
    grid-template-columns: 10fr 1fr;
}

.scroll-row:nth-of-type(even) {
    background-color: var(--color4);
}

.scroll-row td {
    padding: .5rem .3rem;
}

.user-item {
    margin: 0 0 2rem 0;
    width: fit-content;
}

.no-border-radius-bottom {
    border-radius: 5px 5px 0 0 !important;
}

/* ---------------------------------------------------------------------- */
/* ------------------------------ IDS ----------------------------------  */

#header-wrap {
    margin: 0 0 1rem 0;
    padding: .8rem 1rem .5rem 1rem;
    display: flex;
    justify-content: space-between;
}

#logo-hdr {
    display: block;
    margin: 0 auto;
    font-family: sans-serif;
    text-decoration: none;
    font-size: 2rem;
    z-index: 2;
}

#logo-brand {
    border-top: 4px groove var(--color4);
    border-bottom: 4px groove var(--color4);
}

#logo-brand:hover {
    color: var(--color1);
}

#logo-img {
    margin: 0 0 .40rem 0;
    vertical-align: middle;
    width: 50px;
}

#add-btn {
    position: absolute;
    bottom: 10px;
    right: 10px;
}

#add-btn:hover {
    background-color: var(--color2);
    color: var(--color4);
    border: 2px solid var(--color4);
}

.add-btn {
    width: 45px;
    height: 45px;
    border-radius: 100%;
    display: grid;
    justify-content: center;
    align-content: center;
    font-size: 1.4rem;
    text-decoration: none;
}

.add-btn:hover {
    background-color: var(--color2);
    color: var(--color4);
    border: 2px solid var(--color4);
}

.search-btn {
    cursor: pointer;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    display: grid;
    float: right;
    justify-content: center;
    align-content: center;
    font-size: 1.4rem;
    text-decoration: none;
}

.search-btn:hover {
    background-color: var(--color5);
}

#scroll-table {
    font-family: monospace;
    table-layout: fixed;
    width: 100%;
    word-wrap: break-word;
    hyphens: auto;
}

.form .row {
    margin: 0 0 .75rem 0;
}

.form input, .form fieldset, .search-box {
    border: 1px solid var(--color2);
    border-radius: 5px;
}

fieldset {
    margin: 0;
}

fieldset label {
    margin: 0 .65rem;
}

fieldset label input {
    margin: 0;
}

.form .btn {
    font-size: 1.2rem;
    margin: 1rem 1rem 1rem 0;
    padding: 1rem;
    line-height: normal;
    border-radius: 5px;
}

#add_edit-form textarea {
    font-size: 1.5rem;
}

#shareUserDropdown, #coAuthorUserDropdown {
    position: relative;
}

#over-select {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
}

#shareUserCheckboxes, #coAuthorUserCheckboxes {
    border: 1px solid var(--color2);
    border-radius: 0 0 5px 5px;
}

.hover-pointer:hover {
    cursor: pointer;
}

#favoritesButton.active {
    background-color: var(--color1);
}


/* ---------------------------------------------------------------------- */
/* ------------------------------ NAV TOGGLE ---------------------------  */

.hambars {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 40px;
    width: 44px;
    position: absolute;
    top: 20px;
    right: 10px;
    z-index: 100;
}

.hambars span,
.hambars span:before,
.hambars span:after {
    content: " ";
    height: 4px;
    width: 30px;
    position: absolute;
    background-color: var(--color4);
    transition: 150ms ease-in-out;
    border-radius: 5px;
}

.hambars:hover > span,
.hambars:hover > span:before,
.hambars:hover > span:after {
    background-color: var(--color1);
}

.hambars span:before {
    top: -10px;
}

.hambars span:after {
    top: 10px;
}

.open span {
    background: transparent;
}

.open span:before, .open span:after {
    top: 0;
    width: 33.3333333333px;
}

.open span:before {
    transform: rotate(-315deg);
}

.open span:after {
    transform: rotate(135deg);
}

.open:hover > span {
    background-color: transparent;
}

.navMenu {
    position: absolute;
    top: -80vh;
    right: 0;
    width: 180px;
    height: fit-content;
    padding: 6rem 0 0 0;
    border-radius: 0 0 0 10px;
    font-size: 1.3em;
    display: flex;
    flex-direction: column;
    justify-content: end;
    transition: 250ms ease-out;
}

.navMenu ul {
    list-style-type: none;
    margin: 0 auto .5rem;
    padding: 0;
}

.navMenu a {
    display: block;
    margin: 1rem 0;
    font-family: sans-serif;
    color: transparent;
    text-decoration: none;
}

.navMenu.open {
    top: 0;
}

.navMenu.open a {
    color: var(--color4);
    transition: 215ms color step-end;
}

.navMenu.open a:hover {
    color: var(--color1);
    transition: none;
}


/* ---------------------------------------------------------------------- */
/* ------------------------------ CO-AUTHOR SLIDER----------------------  */

.switch {
    position: relative;
    display: inline-block;
    width: 43px;
    height: 24px;
}
  
.switch input { 
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 18px;
    width: 18px;
    left: 3px;
    bottom: 3px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: #2196F3;
}

input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
    -webkit-transform: translateX(18px);
    -ms-transform: translateX(18px);
    transform: translateX(18px);
}

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
border-radius: 50%;
}

input[type="radio"] {
    scale: 1.4;
    margin-left: .25rem; 
}

